Se creó con Colab

--- a/Challenge_Telecom_X_Parte_2.ipynb
+++ b/Challenge_Telecom_X_Parte_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPsvtS42Iza7yqe9kAXoH/3",
+      "authorship_tag": "ABX9TyM2ohGpSpCLCu50aiV7jnxy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2787,6 +2787,47 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 📊 Conclusión Estratégica — Predicción de Cancelación (Churn)\n",
+        "\n",
+        "**Modelos probados:**  \n",
+        "- **Regresión Logística** (con estandarización)  \n",
+        "- **Random Forest** (sin estandarización)  \n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 🔍 Hallazgos clave\n",
+        "1. **Contrato “Month-to-month”** es el principal driver de cancelación; los contratos **One/Two year** protegen contra churn.  \n",
+        "2. **Tenure corto** (baja antigüedad) incrementa la probabilidad de cancelar.  \n",
+        "3. **Cargo mensual alto** + **Cargo total bajo** caracteriza a clientes recientes con mayor propensión a abandonar si no perciben valor rápido.  \n",
+        "4. **Ausencia de servicios de soporte/seguridad** (TechSupport/OnlineSecurity) se asocia con mayor churn.  \n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 🚀 Recomendaciones accionables\n",
+        "- **Migración de contrato:** campañas para pasar clientes *month-to-month* a *One/Two year* con incentivos (descuento inicial / paquetes de valor).  \n",
+        "- **Onboarding de 0–6 meses:** activar *bundles* de soporte/seguridad y comunicaciones de valor durante las primeras 8–12 semanas.  \n",
+        "- **Alertas tempranas:** implementar regla con *score* de churn y umbral optimizado, priorizando **tenure bajo + contrato mensual + cargo mensual alto sin addons**.  \n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 📈 Métricas de éxito\n",
+        "- Retención a 90 días en cohortes tratadas.  \n",
+        "- Uptake de upgrades a contratos anuales.  \n",
+        "- Reducción del churn mensual en segmento *month-to-month*.  \n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 🎯 Elección de modelo (según objetivo)\n",
+        "- **Máximo recall** para detectar a los que se van → **Regresión Logística** (explicable y con buen recall).  \n",
+        "- **Desempeño global estable** y captura de relaciones no lineales → **Random Forest** (robusto y buen ROC-AUC).  \n"
+      ],
+      "metadata": {
+        "id": "LZA4r6OoIfv4"
+      }
     }
   ]
 }
